# payments-mcp-server

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
docs/: HLD.md  LLD.md  PLAN.md
evals/: __init__.py  runner.py  scenarios.py
scripts/: smoke_m0.py  smoke_m2.py  smoke_m3.py  smoke_m5.py
src/payments_mcp/: __init__.py  audit.py  config.py  errors.py  gateway.py  operations.py  policy.py  server.py
src/payments_mcp/backend/: __init__.py  base.py  demo_backend.py  http_backend.py
tests/: test_m1_backend.py  test_m2_policy.py  test_m3_create.py  test_m4_m5.py
